荣誉按卡片样式展示

--- a/index.html
+++ b/index.html
@@ -83,21 +83,49 @@
                     </a>
                 </div>
                 <div class="hero-visual">
-                    <div class="ai-workflow">
-                        <div class="workflow-node" data-delay="0">
-                            <span>用户需求</span>
+                    <div class="honor-cards-container">
+                        <div class="honor-card" data-card="1">
+                            <div class="card-inner">
+                                <img src="assets/deepseek.jpg" alt="DeepSeek AI航海实战" class="card-image">
+                                <div class="card-overlay">
+                                    <h4 class="card-title">DeepSeek AI航海</h4>
+                                    <p class="card-desc">航海教练认证</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="workflow-arrow"></div>
-                        <div class="workflow-node" data-delay="200">
-                            <span>AI分析</span>
+                        <div class="honor-card" data-card="2">
+                            <div class="card-inner">
+                                <img src="assets/mcp.jpg" alt="MCP技术专家认证" class="card-image">
+                                <div class="card-overlay">
+                                    <h4 class="card-title">MCP技术专家</h4>
+                                    <p class="card-desc">模型上下文协议</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="workflow-arrow"></div>
-                        <div class="workflow-node" data-delay="400">
-                            <span>产品创新</span>
+                        <div class="honor-card" data-card="3">
+                            <div class="card-inner">
+                                <img src="assets/xiaodengta-chuanshushi.jpg" alt="生财小灯塔传授师" class="card-image">
+                                <div class="card-overlay">
+                                    <h4 class="card-title">生财小灯塔</h4>
+                                    <p class="card-desc">传授师认证</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="workflow-arrow"></div>
-                        <div class="workflow-node" data-delay="600">
-                            <span>用户价值</span>
+                        <div class="honor-card" data-card="4">
+                            <div class="card-inner">
+                                <img src="assets/xiaodengta-jiaolian.jpg" alt="生财小灯塔教练" class="card-image">
+                                <div class="card-overlay">
+                                    <h4 class="card-title">生财小灯塔</h4>
+                                    <p class="card-desc">航海教练认证</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 卡片放大遮罩层 -->
+                    <div class="card-modal-overlay" id="cardModal">
+                        <div class="card-modal-content">
+                            <button class="card-modal-close" id="cardModalClose">&times;</button>
+                            <img src="" alt="" class="card-modal-image" id="cardModalImage">
                         </div>
                     </div>
                 </div>
